--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.29.2",
     "resend": "^0.15.3",
-    "vue-toast-notification": "^3.1.1"
+    "vue3-toastify": "^0.1.11"
   }
 }
