--- a/package.json
+++ b/package.json
@@ -9,15 +9,32 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@nuxt/devtools": "latest",
+    "@nuxt/typescript-build": "^3.0.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@types/node": "^18",
-    "nuxt": "^3.5.2",
-    "sass": "^1.63.4"
+    "@types/uuid": "^9.0.7",
+    "nuxt": "^3.8.1",
+    "nuxt-security": "1.0.0-rc.3",
+    "sass": "^1.63.4",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxt/image": "^1.0.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^10.6.1",
+    "@vueuse/nuxt": "^10.6.1",
+    "axios": "^1.6.2",
     "primeicons": "^6.0.1",
     "primevue": "^3.29.2",
-    "resend": "^0.15.3",
-    "vue3-toastify": "^0.1.11"
+    "resend": "^2.0.0",
+    "uuid": "^9.0.1",
+    "vee-validate": "^4.11.8",
+    "vue-tsc": "^1.8.22",
+    "vue3-toastify": "^0.1.11",
+    "yup": "^1.3.2"
   }
 }
