--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.6.2",
     "primeicons": "^6.0.1",
